assets/css/webcodr.css
/* ... */
.header-link {
	color: inherit;
	text-decoration: none;
}

.theme-toggle {
	display: flex;
	margin-top: 1em;
	margin-right: 10px;
	justify-content: flex-end;
}

.theme-toggle__wrapper {
	display: flex;
	align-items: center;
	cursor: pointer;
}

.theme-toggle__desc {
	margin-right: 0.5em;
	line-height: 1em;
}

@media screen and (min-width: 840px) {
	.header {
		padding-top: 1em;
	}
	.theme-toggle {
		margin-right: 0;
	}
}
.footer {
	color: var(--footer-text-color);
	margin: 0 10px;
	padding: 0.5ex 0 1em 0;
}

.footer-menu {
	padding: 0;
	display: flex;
	flex-wrap: wrap;
}

.footer-item {
	flex-direction: column;
	list-style-type: none;
	margin: 1ex 0;
	width: 100%;
}

.footer-link {
	color: inherit;
	text-decoration: underline;
}

@media screen and (min-width: 840px) {
	.footer {
		margin: 0;
	}
}
.container {
	width: auto;
}

.container--main {
	padding-top: 2em;
	background: var(--container-background-color);
	display: flex;
	flex-direction: column;
}

@media screen and (min-width: 840px) {
	.container {
		width: 800px;
		margin: 0 auto;
	}
}
.post {
	margin-bottom: 5em;
}
.post:last-of-type {
	margin-bottom: 2em;
}

.post-meta {
	color: var(--post-meta-text-color);
	letter-spacing: 0.1em;
	font-size: 18px;
	margin: 0 0 3em 0;
	padding: 0.2em 10px;
}

.post-date {
	color: inherit;
}

.post-link--meta {
	color: inherit;
}

.post-language {
	position: relative;
	top: 2px;
	font-size: 17px;
}

.post-headline {
	margin: 0 0 0.5em 0;
	line-height: 1em;
}

.post-link--headline {
	color: inherit;
	text-decoration: none;
}

.post-content {
	font-size: 22px;
	line-height: 1.8em;
}
.post-content p {
	margin-bottom: 1em;
	padding: 0 10px;
}
.post-content a {
	color: var(--post-text-color);
	text-decoration: none;
	border-bottom: 2px solid var(--post-text-color);
}
.post-content li {
	margin: 0.3em 0 0.3em 0;
}
.post-content blockquote {
	border-left: 4px solid var(--blockquote-border-color);
	margin: 1.5em 0 0 1.5em;
	padding: 0 1.5em;
	font-style: italic;
}
.post-content img {
	max-width: 100%;
}
.post-content .highlight {
	margin: 0.5em 0 1em;
	padding: 10px 0 10px 10px;
	background-color: var(--code-background-color);
}

.post-content pre {
	display: grid;
	grid-template-columns: minmax(0, 1fr) calc(2.25rem + 10px);
	margin: 0;
	position: relative;
	overflow: visible;
}

.post-content .chroma code {
	display: block;
	grid-column: 1;
	grid-row: 1;
	min-width: 0;
	margin-right: 0;
	border-radius: 0;
	font-family: var(--monospace-font);
	font-size: 18px;
	overflow-x: auto;
	scrollbar-width: none;

  .line {
    line-height: 1.5em;
  }
}
.post-content p code,
.post-content ul code,
.post-content ol code {
	border-radius: 5px;
	padding: 0.2em 0.3em;
	background-color: var(--code-background-color);
	color: var(--code-text-color);
	font-family: var(--monospace-font);
	font-size: 16px;
}
.post-content table {
	width: 100%;
}
.post-content th {
	text-align: left;
	color: var(--headline-tertiary-color);
}
.post-content th,
.post-content td {
	padding: 5px;
}
.post-content ol,
.post-content ul {
	padding-right: 10px;
}
.post-content tr th:first-child {
	padding-left: 10px;
}
.post-content tr th:last-child {
	padding-right: 10px;
}
.post-content tr td:first-child {
	padding-left: 10px;
}
.post-content tr td:last-child {
	padding-right: 10px;
}

.post-content--language {
	display: block;
	width: fit-content;
	font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
	line-height: 1;
	font-weight: bold;
	font-size: 20px;
	color: var(--code-text-color);
	text-transform: uppercase;
  margin-left: 10px;
}

.post-content--copy {
	display: inline-flex;
	grid-column: 2;
	grid-row: 1;
	align-self: start;
	justify-self: end;
	z-index: 1;
	align-items: center;
  align-self: start;
	justify-content: center;
	width: 2.25rem;
	height: 2.25rem;
	border: none;
	border-radius: 4px;
	padding: 0.1rem;
	--copy-button-icon: url("/icons/copy.svg");
	background-color: var(--code-background-color);
	color: var(--post-meta-text-color);
	cursor: pointer;
	line-height: 1;
	opacity: 0.75;
}

.post-content--copy:hover,
.post-content--copy:focus {
	border-color: var(--code-text-color);
	background-color: rgba(255, 158, 100, 0.1);
	color: var(--code-text-color);
	opacity: 1;
}

.post-content--copy:disabled {
	cursor: default;
	opacity: 0.85;
}

.post-content--copy::before {
	content: "";
	display: block;
	width: 1rem;
	height: 1rem;
	background-color: currentColor;
	-webkit-mask: var(--copy-button-icon) center / contain no-repeat;
	mask: var(--copy-button-icon) center / contain no-repeat;
}

.post-content--copy-success {
	--copy-button-icon: url("/icons/check.svg");
	color: var(--headline-base-color);
}

.post-content--copy-error {
	--copy-button-icon: url("/icons/exclamation.svg");
	color: var(--headline-seconday-color);
}

@media screen and (min-width: 840px) {
	.post-meta {
		padding: 0.2em 0;
	}
	.post-content pre {
		margin: 0;
	}
	.post-content code,
	.post-content table {
		margin: 0;
	}
	.post-content th {
		border-bottom: 1px solid var(--post-text-color);
	}
	.post-content p {
		padding: 0;
	}
	.post-content ol,
	.post-content ul {
		padding-right: 0;
	}
	.post-content .highlight {
		--code-surface-bleed: min(32px, max(0px, calc((100cqw - 800px) / 2)));
		margin-inline: calc(-1 * var(--code-surface-bleed));
		padding: 24px 32px;
		padding-inline: var(--code-surface-bleed);
		border-radius: 5px;
	}
	.post-content .chroma code {
		padding-left: 0;
	}
	.post-content--copy {
		margin-top: -12px;
		margin-right: calc(-1 * min(22px, var(--code-surface-bleed)));
	}

  .post-content--language {
    margin-left: 0;
  }
}
.pagination {
	display: flex;
	margin: 0 10px;
}

.pagination__item {
	flex-direction: row;
	width: 50%;
}

.pagination__item-position-prev {
	text-align: left;
}

.pagination__item-position-next {
	text-align: right;
}

.pagination__link {
	color: var(--post-text-color);
	text-decoration: none;
}

.pagination__link:hover {
	color: var(--hheadline-seconday-color);
}
/* ... */

